2006-04-26  Miguel de Icaza  <miguel@novell.com>

	* MethodBuilder.cs: better error messages when we close the
	method. 

2006-03-28  Marek Safar  <marek.safar@seznam.cz>

	* ILGenerator.cs: Delayed the exception stack creation. It saves ~1.5 MB
	for corlib compilation.

2006-03-27  Marek Safar  <marek.safar@seznam.cz>

	* ILGenerator.cs: Tune up label defaults, switched to double resizing.

2006-03-15  Zoltan Varga  <vargaz@gmail.com>

	* AssemblyBuilder.cs (AddTypeForwarder): New internal method for
	adding type forwarders to an assembly.

2006-02-27  Gert Driesen  <drieseng@users.sourceforge.net>

	* ConstructorBuilder.cs: In AddDeclarativeSecurity, throw an
	ArgumentOutOfRangeException instead of an ArgumentException if action 
	is a Request* action. Fixes bug #77640.
	* MethodBuilder.cs: Same.
	* TypeBuilder.cs: Same.

Mon Feb 27 17:12:40 CET 2006 Paolo Molaro <lupus@ximian.com>

	* ModuleBuilder.cs: unlink the file before saving
	otherwise we might overwrite a file mmapped by the runtime.

2006-02-17  Zoltan Varga  <vargaz@gmail.com>

	* DynamicMethod.cs: Implement DefineParameter ().

	* ParameterBuilder.cs: Add support for DynamicMethod parents.

2006-02-15  Martin Baulig  <martin@ximian.com>

	* TypeBuilder.cs (TypeBuilder.DefineMethod): Also enable the
	2-argument version in the `BOOTSTRAP_NET_2_0' profile.
	(TypeBuilder.DefineGenericMethod): Removed.

2006-02-14  Martin Baulig  <martin@ximian.com>

	* ConstructorBuilder.cs
	(ConstructorBuilder.IsGenericMethod): Override this and return
	false; the MS runtime doesn't throw an exception here.
	(ConstructorBuilder.IsGenericMethodDefinition): Likewise.

	* MethodBuilder.cs
	(MethodBuilder.IsGenericMethod): Implement this.
	(MethodBuilder.IsGenericMethodDefinition): Likewise.

2006-02-03  Zoltan Varga  <vargaz@gmail.com>

	* TypeBuilder.cs (CreateType): Add a check for Sealed parents.

2006-02-01  Zoltan Varga  <vargaz@gmail.com>

	* OpCodes.cs: Readonly is a net 2.0 only field.
